--- a/index.html
+++ b/index.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Broadway</title>
 </head>
+
 <body>
-    
+    <div class="navigation">
+        <h1>Broadway Design</h1>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#process">Process</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contacts">Contact</a></li>
+        </ul>
+    </div>
+
+    <div id="process">
+        <h2>Our Process</h2>
+        <img src="./resource/images/identify.svg" alt="identify">
+        <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
+        <img src="./resource/images/understand.svg" alt="understand">
+        <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+        <img src="./resource/images/execute.svg" alt="execute">
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
+    </div>
+    <div id="work">
+        <h2>Portfolio</h2>
+        <p>Coming Soon</p>
+        <h2 id="team">Team</h2>
+        <p>We're Hiring!</p>
+        <h2 id="contacts">Contact</h2>
+        <p>Phone: (555)-555-5555 <br> E-mail: test@example.com <br> Twitter: @test</p>
+    </div>
+
+    <div class="footer">
+        <p>copyright Broadway 2016</p>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#process">Process</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contacts">Contact</a></li>
+        </ul>
+
+    </div>
+
 </body>
+
 </html>
