--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link type="text/css" rel="stylesheet" href="resource/css/style.css">
     <title>Broadway</title>
 </head>
 
