Edited css and html + Footer need fix-v2

--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
         <p>We put everything we have into our work.</p>
     </div>
     <div id="work">
+       <div id="work_title">Designed in New York</div>
         <h2>Portfolio</h2>
         <p>Coming Soon</p>
         <h2 id="team">Team</h2>
         <p>We're Hiring!</p>
         <h2 id="contacts">Contact</h2>
-        <p>Phone: (555)-555-5555 <br> E-mail: test@example.com <br> Twitter: @test</p>
+        <p>Phone: (555)-555-5555 <br><br> E-mail: test@example.com <br><br> Twitter: @test<br></p>
     </div>
 
     <div class="footer">
-        <p>copyright Broadway 2016</p>
+        <p>&copy; Broadway 2016</p>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#process">Process</a></li>
