Final edit and final project

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>We put everything we have into our work.</p>
     </div>
     <div id="work">
-       <div id="work_title">Designed in New York</div>
+        <div id="work_title">Designed in New York</div>
         <h2>Portfolio</h2>
         <p>Coming Soon</p>
         <h2 id="team">Team</h2>
@@ -43,7 +43,7 @@
 
     <div class="footer">
         <p>&copy; Broadway 2016</p>
-        <ul>
+        <ul class="nav">
             <li><a href="#">Home</a></li>
             <li><a href="#process">Process</a></li>
             <li><a href="#work">Work</a></li>
