--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 <body>
     <div class="navigation">
         <h1>Broadway Design</h1>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#process">Process</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#contacts">Contact</a></li>
-        </ul>
+        <p><a href="#">Home</a></p>
+        <p><a href="#process">Process</a></p>
+        <p><a href="#work">Work</a></p>
+        <p><a href="#team">Team</a></p>
+        <p><a href="#contacts">Contact</a></p>
     </div>
 
     <div id="process">
@@ -42,14 +40,13 @@
     </div>
 
     <div class="footer">
-        <p>&copy; Broadway 2016</p>
-        <ul class="nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#process">Process</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#contacts">Contact</a></li>
-        </ul>
+        <p>&copy; Broadway 2016
+            <span> <a href="#">Home</a></span>
+            <span> <a href="#process">Process</a></span>
+            <span> <a href="#work">Work</a></span>
+            <span> <a href="#team">Team</a></span>
+            <span> <a href="#contacts">Contact</a></span>
+        </p>
 
     </div>
 
